tools/tests/errors/surf_type_05.experr
type 'Integer' is not callable
